<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <!-- TITLE -->
    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:padding="5dp"
        android:background="#3369ac"
        android:textColor="#fff"
        android:text="@string/main_title"
        android:textSize="25sp" />
    
        <!--homeScreenBalance -->
    <TextView
        android:id="@+id/homeScreenBalance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:background="#acaeb0"
        android:text="@string/home_screen_balance"
        android:textSize="12sp" />

    <!-- 1.Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false" >

        <RelativeLayout
            android:id="@+id/activity_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:baselineAligned="false"
            android:gravity="bottom|right"
            android:onClick="open"
            android:padding="@dimen/padding" >

            <ImageView
                android:id="@+id/menuIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/iconMenuDescrption"
                android:background="@drawable/border"
                android:src="@drawable/ic_food" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/activity_dates"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:baselineAligned="false"
            android:gravity="bottom"
            android:onClick="open"
            android:padding="@dimen/padding" >

            <ImageView
                android:id="@+id/datesIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/iconDatesDescrption"
                android:background="@drawable/border"
                android:src="@drawable/ic_dates" />
        </RelativeLayout>
    </LinearLayout>

    <!-- 2. Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false" >

        <RelativeLayout
            android:id="@+id/activity_badge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:baselineAligned="false"
            android:gravity="right"
            android:onClick="open"
            android:padding="@dimen/padding" >

            <ImageView
                android:id="@+id/badgeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/iconBadgeDescrption"
                android:background="@drawable/border"
                android:src="@drawable/ic_badge" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/activity_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:baselineAligned="false"
            android:onClick="open"
            android:padding="@dimen/padding" >

            <ImageView
                android:id="@+id/mapIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/iconMapDescrption"
                android:background="@drawable/border"
                android:src="@drawable/ic_map" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>